// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin_console/team_channel_settings/channel/ChannelDetails should match snapshot 1`] = `
<div>
  <div
    class="wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
      data-testid="admin-console-header"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/channels"
        />
        Channel Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminPanel clearfix "
          id="channel_profile"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Profile
              </h3>
              <div
                class="mt-2"
              >
                Summary of the channel, including the channel name.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels AdminChannelDetails"
          >
            <div
              class="group-teams-and-channels--body channel-desc-col"
            >
              <div
                class="channel-name"
              >
                <b>
                  Name
                </b>
                <br />
                name
              </div>
              <div
                class="channel-team"
              >
                <b>
                  Team
                </b>
                <br />
                test
              </div>
              <div
                class="AdminChannelDetails_archiveContainer"
              >
                <button
                  class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47 _button--destructive_doayp_130"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="_button__icon-slot_doayp_27"
                  >
                    <div
                      aria-hidden="true"
                      class="_icon_1i355_2 _icon--size-16_1i355_38"
                    >
                      <div
                        class="_icon__glyph-area_1i355_9"
                      >
                        <svg
                          fill="currentColor"
                          height="18"
                          version="1.1"
                          viewBox="0 0 24 24"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M9.5 11H14.5C14.78 11 15 11.22 15 11.5V13H9V11.5C9 11.22 9.22 11 9.5 11M5 5V7H19V5H5Z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <span
                    class="_button__label_doayp_24"
                  >
                    Archive Channel
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_moderation"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Advanced Access Control
              </h3>
              <div
                class="mt-2"
              >
                Manage the actions available to channel members and guests.
              </div>
            </div>
          </div>
          <div
            class="channel-moderation"
          >
            <div
              class="channel-moderation--body"
            >
              <table
                class="channel-moderation--table"
                id="channel_moderation_table"
              >
                <thead>
                  <tr>
                    <th>
                      Permissions
                    </th>
                    <th>
                      Guests
                    </th>
                    <th>
                      Members
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_manage"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Management
              </h3>
              <div
                class="mt-2"
              >
                Choose between inviting members manually or syncing members automatically from groups.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels"
          >
            <div
              class="group-teams-and-channels--body"
            >
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Sync Group Members
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="syncGroupSwitch"
                  >
                    <button
                      aria-pressed="false"
                      class="btn btn-lg btn-toggle"
                      data-testid="syncGroupSwitch-button"
                      id="syncGroupSwitch"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      When enabled, adding and removing users from groups will add or remove them from this channel. The only way of inviting members to this channel is by adding the groups they belong to. 
                      <a
                        href="https://mattermost.com/pl/default-ldap-group-constrained-team-channel.html?utm_source=mattermost&utm_medium=in-product&utm_content=channel_modes&uid=&sid=&edition=team&server_version="
                        location="channel_modes"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        Learn More
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Public channel or private channel
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="allow-all-toggle"
                  >
                    <button
                      aria-pressed="true"
                      class="btn btn-lg btn-toggle active"
                      data-testid="allow-all-toggle-button"
                      id="allow-all-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                      <div
                        class="bg-text on"
                      >
                        Public
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Select Public for a channel any user can find and join. 
                      <br />
                      Select Private to require channel invitations to join. 
                      <br />
                      Use this switch to change this channel from public to private or from private to public.
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Enable attribute based channel access
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="policy-enforce-toggle"
                  >
                    <button
                      aria-pressed="false"
                      class="btn btn-lg btn-toggle"
                      data-testid="policy-enforce-toggle-button"
                      id="policy-enforce-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Recommend this channel to users whose attributes match the rules and (optionally) auto-add them. Anyone can still join freely.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_groups"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Groups
              </h3>
              <div
                class="mt-2"
              >
                Select groups to be added to this channel.
              </div>
            </div>
            <div
              class="button"
            >
              <button
                class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
                id="addGroupsToChannelToggle"
                type="button"
              >
                <span
                  class="_button__label_doayp_24"
                >
                  Add Group
                </span>
              </button>
            </div>
          </div>
          <div
            class="groups-list groups-list-no-padding"
          >
            <div
              class="groups-list--header"
            >
              <div
                class="group-name group-name-adjusted"
              >
                Group Name
              </div>
              <div
                class="group-content"
              >
                <div
                  class="group-description group-description-adjusted"
                >
                  Member Count
                </div>
                <div
                  class="group-description group-description-adjusted"
                >
                  Roles
                </div>
                <div
                  class="group-actions"
                />
              </div>
            </div>
            <div
              class="groups-list--body"
              id="groups-list--body"
            >
              <div
                class="groups-list-loading"
              >
                <i
                  class="fa fa-spinner fa-pulse fa-2x"
                />
              </div>
            </div>
            <div
              class="groups-list--footer"
            >
              <div
                class="counter"
              >
                1 - 1 of 1
              </div>
              <button
                class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47 disabled"
                disabled=""
                type="button"
              >
                <span
                  class="_button__label_doayp_24"
                >
                  <i
                    class="icon icon-chevron-left"
                    title="Previous Icon"
                  />
                </span>
              </button>
              <button
                class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47 disabled"
                data-testid="page-link-next"
                disabled=""
                type="button"
              >
                <span
                  class="_button__label_doayp_24"
                >
                  <i
                    class="icon icon-chevron-right"
                    title="Next Icon"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div>
          ChannelMembers
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span
          class="_button__label_doayp_24"
        >
          Save
        </span>
      </button>
      <button
        class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47"
        id="cancelButtonSettings"
        type="button"
      >
        <span
          class="_button__label_doayp_24"
        >
          Cancel
        </span>
      </button>
      <div
        class="error-message"
        data-testid="saveChangesPanel-errorMessage"
      />
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelDetails should match snapshot 2`] = `
<div>
  <div
    class="wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
      data-testid="admin-console-header"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/channels"
        />
        Channel Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminPanel clearfix "
          id="channel_profile"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Profile
              </h3>
              <div
                class="mt-2"
              >
                Summary of the channel, including the channel name.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels AdminChannelDetails"
          >
            <div
              class="group-teams-and-channels--body channel-desc-col"
            >
              <div
                class="channel-name"
              >
                <b>
                  Name
                </b>
                <br />
                name
              </div>
              <div
                class="channel-team"
              >
                <b>
                  Team
                </b>
                <br />
              </div>
              <div
                class="AdminChannelDetails_archiveContainer"
              >
                <button
                  class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47 _button--destructive_doayp_130"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="_button__icon-slot_doayp_27"
                  >
                    <div
                      aria-hidden="true"
                      class="_icon_1i355_2 _icon--size-16_1i355_38"
                    >
                      <div
                        class="_icon__glyph-area_1i355_9"
                      >
                        <svg
                          fill="currentColor"
                          height="18"
                          version="1.1"
                          viewBox="0 0 24 24"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M9.5 11H14.5C14.78 11 15 11.22 15 11.5V13H9V11.5C9 11.22 9.22 11 9.5 11M5 5V7H19V5H5Z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <span
                    class="_button__label_doayp_24"
                  >
                    Archive Channel
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_moderation"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Advanced Access Control
              </h3>
              <div
                class="mt-2"
              >
                Manage the actions available to channel members and guests.
              </div>
            </div>
          </div>
          <div
            class="channel-moderation"
          >
            <div
              class="channel-moderation--body"
            >
              <table
                class="channel-moderation--table"
                id="channel_moderation_table"
              >
                <thead>
                  <tr>
                    <th>
                      Permissions
                    </th>
                    <th>
                      Guests
                    </th>
                    <th>
                      Members
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_manage"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Management
              </h3>
              <div
                class="mt-2"
              >
                Choose between inviting members manually or syncing members automatically from groups.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels"
          >
            <div
              class="group-teams-and-channels--body"
            >
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Sync Group Members
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="syncGroupSwitch"
                  >
                    <button
                      aria-pressed="false"
                      class="btn btn-lg btn-toggle"
                      data-testid="syncGroupSwitch-button"
                      id="syncGroupSwitch"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      When enabled, adding and removing users from groups will add or remove them from this channel. The only way of inviting members to this channel is by adding the groups they belong to. 
                      <a
                        href="https://mattermost.com/pl/default-ldap-group-constrained-team-channel.html?utm_source=mattermost&utm_medium=in-product&utm_content=channel_modes&uid=&sid=&edition=team&server_version="
                        location="channel_modes"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        Learn More
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Public channel or private channel
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="allow-all-toggle"
                  >
                    <button
                      aria-pressed="true"
                      class="btn btn-lg btn-toggle active"
                      data-testid="allow-all-toggle-button"
                      id="allow-all-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                      <div
                        class="bg-text on"
                      >
                        Public
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Select Public for a channel any user can find and join. 
                      <br />
                      Select Private to require channel invitations to join. 
                      <br />
                      Use this switch to change this channel from public to private or from private to public.
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Enable attribute based channel access
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="policy-enforce-toggle"
                  >
                    <button
                      aria-pressed="false"
                      class="btn btn-lg btn-toggle"
                      data-testid="policy-enforce-toggle-button"
                      id="policy-enforce-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Recommend this channel to users whose attributes match the rules and (optionally) auto-add them. Anyone can still join freely.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_groups"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Groups
              </h3>
              <div
                class="mt-2"
              >
                Select groups to be added to this channel.
              </div>
            </div>
            <div
              class="button"
            >
              <button
                class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
                id="addGroupsToChannelToggle"
                type="button"
              >
                <span
                  class="_button__label_doayp_24"
                >
                  Add Group
                </span>
              </button>
            </div>
          </div>
          <div
            class="groups-list groups-list-no-padding"
          >
            <div
              class="groups-list--header"
            >
              <div
                class="group-name group-name-adjusted"
              >
                Group Name
              </div>
              <div
                class="group-content"
              >
                <div
                  class="group-description group-description-adjusted"
                >
                  Member Count
                </div>
                <div
                  class="group-description group-description-adjusted"
                >
                  Roles
                </div>
                <div
                  class="group-actions"
                />
              </div>
            </div>
            <div
              class="groups-list--body"
              id="groups-list--body"
            >
              <div
                class="groups-list-loading"
              >
                <i
                  class="fa fa-spinner fa-pulse fa-2x"
                />
              </div>
            </div>
            <div
              class="groups-list--footer"
            >
              <div
                class="counter"
              >
                1 - 1 of 1
              </div>
              <button
                class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47 disabled"
                disabled=""
                type="button"
              >
                <span
                  class="_button__label_doayp_24"
                >
                  <i
                    class="icon icon-chevron-left"
                    title="Previous Icon"
                  />
                </span>
              </button>
              <button
                class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47 disabled"
                data-testid="page-link-next"
                disabled=""
                type="button"
              >
                <span
                  class="_button__label_doayp_24"
                >
                  <i
                    class="icon icon-chevron-right"
                    title="Next Icon"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div>
          ChannelMembers
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span
          class="_button__label_doayp_24"
        >
          Save
        </span>
      </button>
      <button
        class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47"
        id="cancelButtonSettings"
        type="button"
      >
        <span
          class="_button__label_doayp_24"
        >
          Cancel
        </span>
      </button>
      <div
        class="error-message"
        data-testid="saveChangesPanel-errorMessage"
      />
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelDetails should match snapshot for Enterprise 1`] = `
<div>
  <div
    class="wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
      data-testid="admin-console-header"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/channels"
        />
        Channel Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminPanel clearfix "
          id="channel_profile"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Profile
              </h3>
              <div
                class="mt-2"
              >
                Summary of the channel, including the channel name.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels AdminChannelDetails"
          >
            <div
              class="group-teams-and-channels--body channel-desc-col"
            >
              <div
                class="channel-name"
              >
                <b>
                  Name
                </b>
                <br />
                name
              </div>
              <div
                class="channel-team"
              >
                <b>
                  Team
                </b>
                <br />
                test
              </div>
              <div
                class="AdminChannelDetails_archiveContainer"
              >
                <button
                  class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47 _button--destructive_doayp_130"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="_button__icon-slot_doayp_27"
                  >
                    <div
                      aria-hidden="true"
                      class="_icon_1i355_2 _icon--size-16_1i355_38"
                    >
                      <div
                        class="_icon__glyph-area_1i355_9"
                      >
                        <svg
                          fill="currentColor"
                          height="18"
                          version="1.1"
                          viewBox="0 0 24 24"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M9.5 11H14.5C14.78 11 15 11.22 15 11.5V13H9V11.5C9 11.22 9.22 11 9.5 11M5 5V7H19V5H5Z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <span
                    class="_button__label_doayp_24"
                  >
                    Archive Channel
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_moderation"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Advanced Access Control
              </h3>
              <div
                class="mt-2"
              >
                Manage the actions available to channel members and guests.
              </div>
            </div>
          </div>
          <div
            class="channel-moderation"
          >
            <div
              class="channel-moderation--body"
            >
              <table
                class="channel-moderation--table"
                id="channel_moderation_table"
              >
                <thead>
                  <tr>
                    <th>
                      Permissions
                    </th>
                    <th>
                      Guests
                    </th>
                    <th>
                      Members
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_manage"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Management
              </h3>
              <div
                class="mt-2"
              >
                Choose between inviting members manually or syncing members automatically from groups.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels"
          >
            <div
              class="group-teams-and-channels--body"
            >
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Public channel or private channel
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="allow-all-toggle"
                  >
                    <button
                      aria-pressed="true"
                      class="btn btn-lg btn-toggle active"
                      data-testid="allow-all-toggle-button"
                      id="allow-all-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                      <div
                        class="bg-text on"
                      >
                        Public
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Select Public for a channel any user can find and join. 
                      <br />
                      Select Private to require channel invitations to join. 
                      <br />
                      Use this switch to change this channel from public to private or from private to public.
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Enable attribute based channel access
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="policy-enforce-toggle"
                  >
                    <button
                      aria-pressed="false"
                      class="btn btn-lg btn-toggle"
                      data-testid="policy-enforce-toggle-button"
                      id="policy-enforce-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Recommend this channel to users whose attributes match the rules and (optionally) auto-add them. Anyone can still join freely.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          ChannelMembers
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span
          class="_button__label_doayp_24"
        >
          Save
        </span>
      </button>
      <button
        class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47"
        id="cancelButtonSettings"
        type="button"
      >
        <span
          class="_button__label_doayp_24"
        >
          Cancel
        </span>
      </button>
      <div
        class="error-message"
        data-testid="saveChangesPanel-errorMessage"
      />
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelDetails should match snapshot for Enterprise 2`] = `
<div>
  <div
    class="wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
      data-testid="admin-console-header"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/channels"
        />
        Channel Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminPanel clearfix "
          id="channel_profile"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Profile
              </h3>
              <div
                class="mt-2"
              >
                Summary of the channel, including the channel name.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels AdminChannelDetails"
          >
            <div
              class="group-teams-and-channels--body channel-desc-col"
            >
              <div
                class="channel-name"
              >
                <b>
                  Name
                </b>
                <br />
                name
              </div>
              <div
                class="channel-team"
              >
                <b>
                  Team
                </b>
                <br />
              </div>
              <div
                class="AdminChannelDetails_archiveContainer"
              >
                <button
                  class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47 _button--destructive_doayp_130"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="_button__icon-slot_doayp_27"
                  >
                    <div
                      aria-hidden="true"
                      class="_icon_1i355_2 _icon--size-16_1i355_38"
                    >
                      <div
                        class="_icon__glyph-area_1i355_9"
                      >
                        <svg
                          fill="currentColor"
                          height="18"
                          version="1.1"
                          viewBox="0 0 24 24"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M9.5 11H14.5C14.78 11 15 11.22 15 11.5V13H9V11.5C9 11.22 9.22 11 9.5 11M5 5V7H19V5H5Z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <span
                    class="_button__label_doayp_24"
                  >
                    Archive Channel
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_moderation"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Advanced Access Control
              </h3>
              <div
                class="mt-2"
              >
                Manage the actions available to channel members and guests.
              </div>
            </div>
          </div>
          <div
            class="channel-moderation"
          >
            <div
              class="channel-moderation--body"
            >
              <table
                class="channel-moderation--table"
                id="channel_moderation_table"
              >
                <thead>
                  <tr>
                    <th>
                      Permissions
                    </th>
                    <th>
                      Guests
                    </th>
                    <th>
                      Members
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_manage"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Management
              </h3>
              <div
                class="mt-2"
              >
                Choose between inviting members manually or syncing members automatically from groups.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels"
          >
            <div
              class="group-teams-and-channels--body"
            >
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Public channel or private channel
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="allow-all-toggle"
                  >
                    <button
                      aria-pressed="true"
                      class="btn btn-lg btn-toggle active"
                      data-testid="allow-all-toggle-button"
                      id="allow-all-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                      <div
                        class="bg-text on"
                      >
                        Public
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Select Public for a channel any user can find and join. 
                      <br />
                      Select Private to require channel invitations to join. 
                      <br />
                      Use this switch to change this channel from public to private or from private to public.
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Enable attribute based channel access
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="policy-enforce-toggle"
                  >
                    <button
                      aria-pressed="false"
                      class="btn btn-lg btn-toggle"
                      data-testid="policy-enforce-toggle-button"
                      id="policy-enforce-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Recommend this channel to users whose attributes match the rules and (optionally) auto-add them. Anyone can still join freely.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          ChannelMembers
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span
          class="_button__label_doayp_24"
        >
          Save
        </span>
      </button>
      <button
        class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47"
        id="cancelButtonSettings"
        type="button"
      >
        <span
          class="_button__label_doayp_24"
        >
          Cancel
        </span>
      </button>
      <div
        class="error-message"
        data-testid="saveChangesPanel-errorMessage"
      />
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelDetails should match snapshot for Professional 1`] = `
<div>
  <div
    class="wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
      data-testid="admin-console-header"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/channels"
        />
        Channel Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminPanel clearfix "
          id="channel_profile"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Profile
              </h3>
              <div
                class="mt-2"
              >
                Summary of the channel, including the channel name.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels AdminChannelDetails"
          >
            <div
              class="group-teams-and-channels--body channel-desc-col"
            >
              <div
                class="channel-name"
              >
                <b>
                  Name
                </b>
                <br />
                name
              </div>
              <div
                class="channel-team"
              >
                <b>
                  Team
                </b>
                <br />
                test
              </div>
              <div
                class="AdminChannelDetails_archiveContainer"
              >
                <button
                  class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47 _button--destructive_doayp_130"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="_button__icon-slot_doayp_27"
                  >
                    <div
                      aria-hidden="true"
                      class="_icon_1i355_2 _icon--size-16_1i355_38"
                    >
                      <div
                        class="_icon__glyph-area_1i355_9"
                      >
                        <svg
                          fill="currentColor"
                          height="18"
                          version="1.1"
                          viewBox="0 0 24 24"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M9.5 11H14.5C14.78 11 15 11.22 15 11.5V13H9V11.5C9 11.22 9.22 11 9.5 11M5 5V7H19V5H5Z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <span
                    class="_button__label_doayp_24"
                  >
                    Archive Channel
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_moderation"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Advanced Access Control
              </h3>
              <div
                class="mt-2"
              >
                Manage the actions available to channel members and guests.
              </div>
            </div>
          </div>
          <div
            class="channel-moderation"
          >
            <div
              class="channel-moderation--body"
            >
              <table
                class="channel-moderation--table"
                id="channel_moderation_table"
              >
                <thead>
                  <tr>
                    <th>
                      Permissions
                    </th>
                    <th>
                      Guests
                    </th>
                    <th>
                      Members
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_manage"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Management
              </h3>
              <div
                class="mt-2"
              >
                Choose between inviting members manually or syncing members automatically from groups.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels"
          >
            <div
              class="group-teams-and-channels--body"
            >
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Public channel or private channel
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="allow-all-toggle"
                  >
                    <button
                      aria-pressed="true"
                      class="btn btn-lg btn-toggle active"
                      data-testid="allow-all-toggle-button"
                      id="allow-all-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                      <div
                        class="bg-text on"
                      >
                        Public
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Select Public for a channel any user can find and join. 
                      <br />
                      Select Private to require channel invitations to join. 
                      <br />
                      Use this switch to change this channel from public to private or from private to public.
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          ChannelMembers
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span
          class="_button__label_doayp_24"
        >
          Save
        </span>
      </button>
      <button
        class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47"
        id="cancelButtonSettings"
        type="button"
      >
        <span
          class="_button__label_doayp_24"
        >
          Cancel
        </span>
      </button>
      <div
        class="error-message"
        data-testid="saveChangesPanel-errorMessage"
      />
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelDetails should match snapshot for Professional 2`] = `
<div>
  <div
    class="wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
      data-testid="admin-console-header"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/channels"
        />
        Channel Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminPanel clearfix "
          id="channel_profile"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Profile
              </h3>
              <div
                class="mt-2"
              >
                Summary of the channel, including the channel name.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels AdminChannelDetails"
          >
            <div
              class="group-teams-and-channels--body channel-desc-col"
            >
              <div
                class="channel-name"
              >
                <b>
                  Name
                </b>
                <br />
                name
              </div>
              <div
                class="channel-team"
              >
                <b>
                  Team
                </b>
                <br />
              </div>
              <div
                class="AdminChannelDetails_archiveContainer"
              >
                <button
                  class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47 _button--destructive_doayp_130"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="_button__icon-slot_doayp_27"
                  >
                    <div
                      aria-hidden="true"
                      class="_icon_1i355_2 _icon--size-16_1i355_38"
                    >
                      <div
                        class="_icon__glyph-area_1i355_9"
                      >
                        <svg
                          fill="currentColor"
                          height="18"
                          version="1.1"
                          viewBox="0 0 24 24"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M9.5 11H14.5C14.78 11 15 11.22 15 11.5V13H9V11.5C9 11.22 9.22 11 9.5 11M5 5V7H19V5H5Z"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <span
                    class="_button__label_doayp_24"
                  >
                    Archive Channel
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_moderation"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Advanced Access Control
              </h3>
              <div
                class="mt-2"
              >
                Manage the actions available to channel members and guests.
              </div>
            </div>
          </div>
          <div
            class="channel-moderation"
          >
            <div
              class="channel-moderation--body"
            >
              <table
                class="channel-moderation--table"
                id="channel_moderation_table"
              >
                <thead>
                  <tr>
                    <th>
                      Permissions
                    </th>
                    <th>
                      Guests
                    </th>
                    <th>
                      Members
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_manage"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Management
              </h3>
              <div
                class="mt-2"
              >
                Choose between inviting members manually or syncing members automatically from groups.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels"
          >
            <div
              class="group-teams-and-channels--body"
            >
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Public channel or private channel
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="allow-all-toggle"
                  >
                    <button
                      aria-pressed="true"
                      class="btn btn-lg btn-toggle active"
                      data-testid="allow-all-toggle-button"
                      id="allow-all-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                      <div
                        class="bg-text on"
                      >
                        Public
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Select Public for a channel any user can find and join. 
                      <br />
                      Select Private to require channel invitations to join. 
                      <br />
                      Use this switch to change this channel from public to private or from private to public.
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          ChannelMembers
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="_button_doayp_2 _button--emphasis-primary_doayp_61 _button--size-medium_doayp_47"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span
          class="_button__label_doayp_24"
        >
          Save
        </span>
      </button>
      <button
        class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47"
        id="cancelButtonSettings"
        type="button"
      >
        <span
          class="_button__label_doayp_24"
        >
          Cancel
        </span>
      </button>
      <div
        class="error-message"
        data-testid="saveChangesPanel-errorMessage"
      />
    </div>
  </div>
</div>
`;
